# AgentHQ

./: .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  env.example
agent/: agenthq_agent.py  config.yaml.example  pyproject.toml  run.ps1  run.sh
agent/agenthq_agent/: __init__.py  __main__.py  cli.py  core.py
agent/agenthq_agent/backends/: __init__.py  base.py  tmux.py  windows.py
commander/: bridge.py  config.yaml.example  mcp_server.py  requirements.txt
commander/session/: CLAUDE.md
docker/: Dockerfile.backend  Dockerfile.frontend  nginx.conf
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: ChatRelay.tsx  FileExplorer.tsx  FileTree.tsx  FileViewer.tsx  LogViewer.tsx  NewSessionModal.tsx  SessionCard.tsx  TerminalView.tsx
frontend/src/hooks/: useTerminalWebSocket.ts  useWebSocket.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx  PixelOffice.tsx  SessionDetail.tsx
frontend/src/pixel-office/: constants.ts  types.ts
frontend/src/pixel-office/components/: AgentLabels.tsx  OfficeCanvas.tsx
frontend/src/pixel-office/engine/: characters.ts  officeState.ts  renderer.ts
frontend/src/pixel-office/hooks/: useSessionSync.ts
frontend/src/pixel-office/layout/: furnitureCatalog.ts  layoutSerializer.ts
frontend/src/pixel-office/sprites/: assetLoader.ts
server/: auth.py  config.py  main.py  models.py  pyproject.toml  store.py  ws_manager.py
server/routers/: agents.py  sessions.py  sync.py  ws.py
