[project]
name = "agenthq-server"
version = "0.1.0"
description = "AgentHQ — unified AI session orchestrator backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "aiosqlite>=0.20",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.scripts]
agenthq-server = "server.main:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
